# glassbox

./: .gitignore  Cargo.toml
.github/workflows/: ci.yml
docker/: audit-image.Dockerfile
scripts/: build-audit-image.ps1  build-audit-image.sh
src/: audit.rs  cli.rs  docker.rs  fsdiff.rs  main.rs  network.rs  process.rs  report.rs  rules.rs  signals.rs
