[package]
name = "glassbox"
version = "0.1.0"
edition = "2021"
description = "Audit suspicious install commands in disposable sandboxes"
license = "MIT"
repository = "https://github.com/yourname/glassbox"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
owo-colors = "4.1"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.10"
time = { version = "0.3", features = ["formatting", "macros"] }
